# fastapi_service_template

./: README.md  cookiecutter.json
{{cookiecutter.service_name}}/: .dev.env  .test.env  README.md  build_docker_image.sh  deploy_docker_compose.sh  deploy_infrastructure.sh  pyproject.toml  run_dev_server.sh  tear_down_docker_compose.sh
{{cookiecutter.service_name}}/deployment/docker/: Dockerfile
{{cookiecutter.service_name}}/deployment/docker-compose/: docker-compose.yml
{{cookiecutter.service_name}}/git-hooks/: pre-commit  pre-push
{{cookiecutter.service_name}}/tests/: conftest.py
{{cookiecutter.service_name}}/{{cookiecutter.service_name}}/aggregate1/application/: aggregate1_creator.py
{{cookiecutter.service_name}}/{{cookiecutter.service_name}}/aggregate1/domain/: aggregate1.py  aggregate1_repository.py
{{cookiecutter.service_name}}/{{cookiecutter.service_name}}/aggregate1/infrastructure/: aggregate1_to_item_converter.py  aggregate1_to_mongo_object_converter.py  item_to_aggregate1_converter.py  mongo_aggregate1_repository.py  mongo_object_to_aggregate1_converter.py
{{cookiecutter.service_name}}/{{cookiecutter.service_name}}/entrypoint/: app.py
{{cookiecutter.service_name}}/{{cookiecutter.service_name}}/entrypoint/items/: aggregate1_item.py
{{cookiecutter.service_name}}/{{cookiecutter.service_name}}/entrypoint/routers/: aggregate1_router.py  health_router.py
{{cookiecutter.service_name}}/{{cookiecutter.service_name}}/shared/infrastructure/: mongo_repository.py  settings.py
(+5 files in other folders)
